[build-system]
requires = ["flit", "pyobjc-framework-Cocoa"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "objc_asyncio"
author = "Ronald Oussoren"
author-email = "ronaldoussoren@mac.com"
home-page = "https://objc_asyncio.readthedocs.io/"
description-file = "README.rst"
requires = [
    "pyobjc-framework-Cocoa",
]
requires-python = ">=3.7,<4"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Python Software Foundation License",
    "Operating System :: MacOS :: MacOS X",
    "Framework :: AsyncIO",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta",
#    "Development Status :: 5 - Production/Stable",
]
license="MIT"

[tool.flit.metadata.urls]
"Documentation" = "https://objc_asyncio.readthedocs.io/"
"Source Code" = "https://github.com/ronaldoussoren/objc_asyncio/"
"Issue Tracker" = "https://github.com/ronaldoussoren/objc_asyncio/issues"
"Supporting" = "https://blog.ronaldoussoren.net/support/"
